--- a/redi-connect-front/src/styles/main.scss
+++ b/redi-connect-front/src/styles/main.scss
@@ -102,7 +102,7 @@ a:hover {
   // width: calc(100% + 32px);
 }
 
-// fix word wrapping in the content... maybe a bulma bug? 
+// fix word wrapping in the content... maybe a bulma bug?
 .content {
   word-break: break-word;
 }
@@ -115,13 +115,21 @@ a:hover {
   @include tablet() {
     background: linear-gradient(90deg, $redi-blue-light 50%, $white 50%);
   }
+
+  &--side-menu {
+    background-color: $white;
+
+    @include desktop() {
+      background: linear-gradient(90deg, $redi-blue-light 50%, $white 50%);
+    }
+  }
 }
 
 .color-side-menu {
   margin: -0.75rem auto;
   padding: 0.75rem 0;
 
-  @include tablet() {
+  @include desktop() {
     margin: -3.25rem auto;
     padding: 3.25rem 0;
     background: linear-gradient(90deg, $redi-blue-light 15.8%, $white 15.8%);
